ADD GET /history/bid , /history/sell POST /categories , /logs
